# cambridge-robomaster

./: README.md  copy_to_jetsons.bash
.github/workflows/: pages.yml
adhoc/: DEFAULT_FASTRTPS_PROFILES.xml  install.sh  nmcli.bash  ros_firewall_disable.py  setup.sh
cam_driver/: Dockerfile  README.md  cam_param_jpg.yaml  camera_stream_0.service  cyclone_dds_profile_base.xml  format.bash  install.bash  install.sh  run_docker.bash  run_docker.sh  style.cfg
cam_driver/camera/: CMakeLists.txt  package.xml
cam_driver/camera/cfg/: front_camera.yaml
cam_driver/camera/launch/: camera.launch.py
cam_driver/camera/src/: camera_proc.cpp  camera_source.cpp  image_converter.cpp  image_converter.h  ros_utils.cpp  ros_utils.h
cam_driver_gscam2/: Dockerfile  cam_param_jpg.yaml  cam_param_raw.yaml  cyclone_dds_profile_base.xml  cyclone_dds_profile_nomult.xml  gscam_failure_exit.patch  install.bash  run_docker.sh
camera_utils/: configure_cameras.bash  tracing.bash
docker/: add_group.bash  daemon.json  docker_registry.sh  pull_images.sh  setup_docker_compose.bash
docs/: _config.yml  hardware_setup.md  hardware_setup_jetson.md  hardware_setup_raspi.md  index.md  software_setup.md  supplementary.md
docs/_data/: gallery_common_base.yml  gallery_common_crimping.yml  gallery_common_wiring.yml  gallery_d131_base.yml  gallery_d131_computer.yml  gallery_d131_wiring.yml  gallery_raspi_base.yml  gallery_raspi_wiring.yml  gallery_robot_common_ui_plate.yml  gallery_robot_common_ui_wiring.yml
docs/_includes/: gallery-scripts.html  gallery-styles.html  gallery.html
docs/assets/css/: gallery.css
docs/assets/js/: gallery.js
emergency_stop/: Dockerfile  README.md  emergency_stop_button.service  install.bash
joycon/: Dockerfile  README.md  gamecontrollerdb.txt  install.bash  run_docker.bash
paper/: generate_tables.py  robot_comparison.csv
robomaster_bridge/: 80-can.link  80-can.network  Dockerfile  can.conf  can_up.sh  connect_robomaster.service  denylist-mttcan.conf  install.bash  install.sh  run_docker.sh
setup/: adduser.bash  apt.bash  docker_registry.sh  nmcli.bash  read_cam_cfg.bash  setup.sh  setup_docker_compose.sh  sudocfg.bash  test_opencv_gst.py
ui/: Dockerfile  install.bash  run.bash  run_docker.bash
ui/ui/launch/: ui.launch.py
wifi/: adhoc-wifi-setup.service  nmcli.sh  ros_firewall_enable.py
(+14 files in other folders)
