<?xml version="1.0"?>
<package format="2">
  <name>camera</name>
  <version>0.0.0</version>
  <description>Deep-learning nodes for ROS with support for NVIDIA Jetson and TensorRT, based on the jetson-inference library</description>
  <maintainer email="dustinf@nvidia.com">Dustin Franklin</maintainer>
  <license>Open</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
